# advent

./: .gitignore  advent_config.toml  mojo.txt  rs.txt
mojo/: .gitignore  README.md  new_testsuite.mojo  pixi.toml  pyproject.toml  test.toml  test_solutions  unified_collection.mojo
mojo/src/: advent_utils.mojo  main.mojo  solutions.mojo  t.mojo  t.py  test_solutions.mojo  test_suite.mojo  toml_parser.mojo  toml_parser_new.mojo  toml_reflection.mojo
mojo/src/2023/: advent_utils.mojo  test_days.mojo
mojo/src/2023/days/: day01.mojo  day02.mojo  day03.mojo  day04.mojo  day05.mojo  day06.mojo  day07.mojo  day08.mojo  day09.mojo  day10.mojo  day11.mojo  day12.mojo  day13.mojo  day14.mojo  day15.mojo  day16.mojo  day17.mojo
mojo/src/2024/: advent_utils.mojo  main.mojo  test_solutions.mojo
mojo/src/2024/days/: day02.mojo  day04.mojo  day05.mojo  template.mojo
mojo/src/2025/: advent_utils.mojo  main.mojo  test_solutions.mojo
mojo/src/2025/days/: day02.mojo
mojo/src/aoc2023/: day01.mojo  day02.mojo  day03.mojo  day04.mojo  day05.mojo  day06.mojo  day07.mojo  day08.mojo  day09.mojo  day10.mojo  day11.mojo  day12.mojo  day13.mojo  day14.mojo  day15.mojo  day16.mojo  day17.mojo
mojo/src/aoc2024/: day01.mojo  day02.mojo  day03.mojo  day04.mojo  day05.mojo  template.mojo
mojo/src/aoc2025/: day01.mojo  day02.mojo  day04.mojo  day05.mojo  template.mojo
python/: pyproject.toml
python/src/2021/day1/: day1.py  day3.py
python/src/2022/: day7.py
python/src/2023/: main.py
python/src/2023/days/: day01.py  day02.py  day12.py
python/src/2024/: main.py
python/src/advent/: main.py  solutions.py  tests.py
python/src/advent/aoc2023/: __init__.py
python/src/advent/aoc2023/days/: day01.py  day02.py
python/src/advent/aoc2024/: __init__.py
python/src/advent/aoc2024/days/: day01.py
python/src/advent/aoc2025/: __init__.py
python/src/aoc2021/: game.py
python/src/aoc2021/day1/: day1.py  day3.py
python/src/aoc2022/: day7.py
python/src/aoc2023/: advent_utils.py  main.py
python/src/aoc2023/days/: day01.py  day02.py  day12.py
python/src/aoc2024/: advent_utils.py  main.py
python/src/aoc2024/days/: day01.py  day02.py
python/src/aoc2025/: advent_utils.py  main.py
python/src/aoc2025/days/: day01.py
rust/: Cargo.toml
rust/2023/src/: lib.rs
rust/2024/src/: advent_utils.rs
rust/2024/src/days/: day04.rs  day05.rs
rust/2025/: Cargo.toml
rust/2025/src/: main.rs
rust/2025/src/days/: day01.rs
rust/advent/: Cargo.toml
rust/advent/src/: advent_utils.rs  main.rs
zig/src/2024/: advent_utils.zig
zig/src/2024/days/: day01.zig  day02.zig
