[project]
name = "advent-mojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mojo>=0.26.1.0.dev2026011805",
    "mojo-compiler>=0.26.1.0.dev2026011705",
]

[[tool.uv.index]]
url = "https://whl.modular.com/nightly/simple/"
# default = true
