[project]
name = "advent-mojo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

[tool.pixi.workspace]
channels = ["https://prefix.dev/max-nightly", "https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64"]
preview = ["pixi-build"]

[tool.pixi.dependencies]
mojo = "*"
motoml = { git = "https://github.com/IbarraSamuel/motoml" }

[tool.pixi.tasks]
advent = { cmd = "mojo src/main.mojo" }
