[project]
name = "python"
version = "0.1.0"
description = "Advent of Code!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.basedpyright]
include = ["2023", "2024"]
pythonPlatform = "All"
typeCheckingMode = "all"
pythonVersion = "3.14"
reportMissingTypeStubs = false
reportImplicitRelativeImport = false

[tool.ruff.lint]
select = ["ALL"]
preview = true
ignore = [
    "D203",   # One blank line before class docstring. Conflicts with D213.
    "D212",   # No blank lines allowed before function docstring. Conflicts with D213.
    "COM812", # Conflicts with Formatter
    "ISC001", # Conflicts with Formatter
    "CPY001",
]

[tool.ty.environment]
root = ["src/2023", "src/2024"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src/2024"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
