[project]
name = "python"
version = "0.1.0"
description = "Advent of Code!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.basedpyright]
include = ["2023", "2024"]
pythonPlatform = "All"
typeCheckingMode = "all"
pythonVersion = "3.14"
reportMissingTypeStubs = false
reportImplicitRelativeImport = false

[tool.ruff]
extend = "~/tools/configs/ruff/ruff.toml"

[tool.ruff.lint]
extend-ignore = [
    "CPY001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
]

[tool.ty.environment]
root = ["src/aoc2023", "src/aoc2024"]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = ["src/2024"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
