[project]
name = "advent"
version = "0.1.0"
description = "Advent of Code!"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[tool.ty.rules]
all = ["error"]

[tool.zuban]
strict = true
# [tool.ty.environment]
# root = ["src/aoc2023", "src/aoc2024", "src/aoc2025", "src/advent"]

[tool.pytest.ini_options]
# addopts = "--doctest-modules"
testpaths = ["src/advent"]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.9,<0.11.0"]

[project.scripts]
advent = "advent.main:main"
